--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">FinalProject_WJC</string>
+    <string name="app_name">Your App Name</string>
+    <string name="splash_image_description">Splash screen icon</string>
 </resources>
